@@ -12,7 +12,6 @@
  */
 package com.netflix.conductor.core.execution.mapper;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -21,15 +20,15 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
 
-import com.netflix.conductor.common.metadata.tasks.Task;
 import com.netflix.conductor.common.metadata.tasks.TaskType;
 import com.netflix.conductor.common.metadata.workflow.WorkflowDef;
 import com.netflix.conductor.common.metadata.workflow.WorkflowTask;
-import com.netflix.conductor.common.run.Workflow;
+import com.netflix.conductor.model.TaskModel;
+import com.netflix.conductor.model.WorkflowModel;
 
 /**
  * An implementation of {@link TaskMapper} to map a {@link WorkflowTask} of type {@link
- * TaskType#JOIN} to a {@link Task} of type {@link TaskType#JOIN}
+ * TaskType#JOIN} to a {@link TaskModel} of type {@link TaskType#JOIN}
  */
 @Component
 public class JoinTaskMapper implements TaskMapper {
@@ -43,40 +42,30 @@ public class JoinTaskMapper implements TaskMapper {
 
     /**
      * This method maps {@link TaskMapper} to map a {@link WorkflowTask} of type {@link
-     * TaskType#JOIN} to a {@link Task} of type {@link TaskType#JOIN} with a status of {@link
-     * Task.Status#IN_PROGRESS}
+     * TaskType#JOIN} to a {@link TaskModel} of type {@link TaskType#JOIN} with a status of {@link
+     * TaskModel.Status#IN_PROGRESS}
      *
      * @param taskMapperContext: A wrapper class containing the {@link WorkflowTask}, {@link
-     *     WorkflowDef}, {@link Workflow} and a string representation of the TaskId
-     * @return A {@link Task} of type {@link TaskType#JOIN} in a List
+     *     WorkflowDef}, {@link WorkflowModel} and a string representation of the TaskId
+     * @return A {@link TaskModel} of type {@link TaskType#JOIN} in a List
      */
     @Override
-    public List<Task> getMappedTasks(TaskMapperContext taskMapperContext) {
+    public List<TaskModel> getMappedTasks(TaskMapperContext taskMapperContext) {
 
         LOGGER.debug("TaskMapperContext {} in JoinTaskMapper", taskMapperContext);
 
-        WorkflowTask taskToSchedule = taskMapperContext.getTaskToSchedule();
-        Workflow workflowInstance = taskMapperContext.getWorkflowInstance();
-        String taskId = taskMapperContext.getTaskId();
+        WorkflowTask workflowTask = taskMapperContext.getWorkflowTask();
 
         Map<String, Object> joinInput = new HashMap<>();
-        joinInput.put("joinOn", taskToSchedule.getJoinOn());
+        joinInput.put("joinOn", workflowTask.getJoinOn());
 
-        Task joinTask = new Task();
+        TaskModel joinTask = taskMapperContext.createTaskModel();
         joinTask.setTaskType(TaskType.TASK_TYPE_JOIN);
         joinTask.setTaskDefName(TaskType.TASK_TYPE_JOIN);
-        joinTask.setReferenceTaskName(taskToSchedule.getTaskReferenceName());
-        joinTask.setWorkflowInstanceId(workflowInstance.getWorkflowId());
-        joinTask.setCorrelationId(workflowInstance.getCorrelationId());
-        joinTask.setWorkflowType(workflowInstance.getWorkflowName());
-        joinTask.setScheduledTime(System.currentTimeMillis());
         joinTask.setStartTime(System.currentTimeMillis());
         joinTask.setInputData(joinInput);
-        joinTask.setTaskId(taskId);
-        joinTask.setStatus(Task.Status.IN_PROGRESS);
-        joinTask.setWorkflowTask(taskToSchedule);
-        joinTask.setWorkflowPriority(workflowInstance.getPriority());
+        joinTask.setStatus(TaskModel.Status.IN_PROGRESS);
 
-        return Collections.singletonList(joinTask);
+        return List.of(joinTask);
     }
 }
