@@ -1,5 +1,5 @@
 /*
- * Copyright 2020 Netflix, Inc.
+ * Copyright 2022 Netflix, Inc.
  * <p>
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
  * the License. You may obtain a copy of the License at
@@ -12,7 +12,6 @@
  */
 package com.netflix.conductor.core.execution.mapper;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -21,19 +20,19 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
 
-import com.netflix.conductor.common.metadata.tasks.Task;
 import com.netflix.conductor.common.metadata.tasks.TaskDef;
 import com.netflix.conductor.common.metadata.tasks.TaskType;
 import com.netflix.conductor.common.metadata.workflow.WorkflowDef;
 import com.netflix.conductor.common.metadata.workflow.WorkflowTask;
-import com.netflix.conductor.common.run.Workflow;
 import com.netflix.conductor.core.exception.TerminateWorkflowException;
 import com.netflix.conductor.core.utils.ParametersUtils;
+import com.netflix.conductor.model.TaskModel;
+import com.netflix.conductor.model.WorkflowModel;
 
 /**
  * An implementation of {@link TaskMapper} to map a {@link WorkflowTask} of type {@link
- * TaskType#SIMPLE} to a {@link Task} with status {@link Task.Status#SCHEDULED}. <b>NOTE:</b> There
- * is not type defined for simples task.
+ * TaskType#SIMPLE} to a {@link TaskModel} with status {@link TaskModel.Status#SCHEDULED}.
+ * <b>NOTE:</b> There is not type defined for simples task.
  */
 @Component
 public class SimpleTaskMapper implements TaskMapper {
@@ -51,61 +50,53 @@ public class SimpleTaskMapper implements TaskMapper {
     }
 
     /**
-     * This method maps a {@link WorkflowTask} of type {@link TaskType#SIMPLE} to a {@link Task}
+     * This method maps a {@link WorkflowTask} of type {@link TaskType#SIMPLE} to a {@link
+     * TaskModel}
      *
      * @param taskMapperContext: A wrapper class containing the {@link WorkflowTask}, {@link
-     *     WorkflowDef}, {@link Workflow} and a string representation of the TaskId
+     *     WorkflowDef}, {@link WorkflowModel} and a string representation of the TaskId
      * @throws TerminateWorkflowException In case if the task definition does not exist
      * @return a List with just one simple task
      */
     @Override
-    public List<Task> getMappedTasks(TaskMapperContext taskMapperContext)
+    public List<TaskModel> getMappedTasks(TaskMapperContext taskMapperContext)
             throws TerminateWorkflowException {
 
         LOGGER.debug("TaskMapperContext {} in SimpleTaskMapper", taskMapperContext);
 
-        WorkflowTask taskToSchedule = taskMapperContext.getTaskToSchedule();
-        Workflow workflowInstance = taskMapperContext.getWorkflowInstance();
+        WorkflowTask workflowTask = taskMapperContext.getWorkflowTask();
+        WorkflowModel workflowModel = taskMapperContext.getWorkflowModel();
         int retryCount = taskMapperContext.getRetryCount();
         String retriedTaskId = taskMapperContext.getRetryTaskId();
 
         TaskDef taskDefinition =
-                Optional.ofNullable(taskToSchedule.getTaskDefinition())
+                Optional.ofNullable(workflowTask.getTaskDefinition())
                         .orElseThrow(
                                 () -> {
                                     String reason =
                                             String.format(
                                                     "Invalid task. Task %s does not have a definition",
-                                                    taskToSchedule.getName());
+                                                    workflowTask.getName());
                                     return new TerminateWorkflowException(reason);
                                 });
 
         Map<String, Object> input =
                 parametersUtils.getTaskInput(
-                        taskToSchedule.getInputParameters(),
-                        workflowInstance,
+                        workflowTask.getInputParameters(),
+                        workflowModel,
                         taskDefinition,
                         taskMapperContext.getTaskId());
-        Task simpleTask = new Task();
-        simpleTask.setStartDelayInSeconds(taskToSchedule.getStartDelay());
-        simpleTask.setTaskId(taskMapperContext.getTaskId());
-        simpleTask.setReferenceTaskName(taskToSchedule.getTaskReferenceName());
+        TaskModel simpleTask = taskMapperContext.createTaskModel();
+        simpleTask.setTaskType(workflowTask.getName());
+        simpleTask.setStartDelayInSeconds(workflowTask.getStartDelay());
         simpleTask.setInputData(input);
-        simpleTask.setWorkflowInstanceId(workflowInstance.getWorkflowId());
-        simpleTask.setWorkflowType(workflowInstance.getWorkflowName());
-        simpleTask.setStatus(Task.Status.SCHEDULED);
-        simpleTask.setTaskType(taskToSchedule.getName());
-        simpleTask.setTaskDefName(taskToSchedule.getName());
-        simpleTask.setCorrelationId(workflowInstance.getCorrelationId());
-        simpleTask.setScheduledTime(System.currentTimeMillis());
+        simpleTask.setStatus(TaskModel.Status.SCHEDULED);
         simpleTask.setRetryCount(retryCount);
-        simpleTask.setCallbackAfterSeconds(taskToSchedule.getStartDelay());
+        simpleTask.setCallbackAfterSeconds(workflowTask.getStartDelay());
         simpleTask.setResponseTimeoutSeconds(taskDefinition.getResponseTimeoutSeconds());
-        simpleTask.setWorkflowTask(taskToSchedule);
         simpleTask.setRetriedTaskId(retriedTaskId);
-        simpleTask.setWorkflowPriority(workflowInstance.getPriority());
         simpleTask.setRateLimitPerFrequency(taskDefinition.getRateLimitPerFrequency());
         simpleTask.setRateLimitFrequencyInSeconds(taskDefinition.getRateLimitFrequencyInSeconds());
-        return Collections.singletonList(simpleTask);
+        return List.of(simpleTask);
     }
 }
